--- a/css/pagina.css
+++ b/css/pagina.css
@@ -29,10 +29,15 @@ text-align: center;
 
 }
 
+h3{
+  font-size: 2rem;
+  color:#738889;
+}
 .center{
   display: flex;
   justify-content: center;
   align-items: center;
+  flex-direction: column;
 }
 .header{
   display: flex;
