--- a/css/main.css
+++ b/css/main.css
@@ -33,6 +33,8 @@ background:  url("/images/jadepic.jpg");
 
   background-position: center;
   background-size: cover;
+
+
 }
 
 
@@ -191,10 +193,26 @@ font-size: 2.5rem;
 
 font-size: 3rem;
 
-
   }
 
 
-
-
 }
+
+
+
+
+
+
+
+  @media (min-device-width:1200px) {
+
+    section{width: 50vw;
+          height: 100vh;
+
+    }
+      .divider{
+        display: flex;
+
+      }
+
+    }
