--- a/css/main.css
+++ b/css/main.css
@@ -204,6 +204,15 @@ font-size: 2.5rem;
 font-size: 3rem;
 
   }
+  .nieuwsbrief-uitleg{
+
+  padding: 2rem 7rem 2rem 7rem;
+    font-size: 2.5rem;
+  margin: .5rem 2rem;
+
+
+
+  }
 
 
 }
@@ -224,12 +233,5 @@ font-size: 3rem;
         display: flex;
 
       }
-      .nieuwsbrief-uitleg{
 
-      padding: 2rem 7rem 1rem 7rem;
-        font-size: 1.8rem;
-      margin-top: 1rem;
-
-
-      }
     }
