blogpagina +stijl homepage

--- a/css/main.css
+++ b/css/main.css
@@ -29,7 +29,7 @@ margin: 4rem;
 
   width: 80%;
   height: 90%;
-background:  url("/images/planten.jpg");
+background:  url("/images/planten2.jpg");
 
   background-position: center;
   background-size: cover;
@@ -207,7 +207,7 @@ font-size: 3rem;
   .nieuwsbrief-uitleg{
 
   padding: 2rem 7rem 2rem 7rem;
-    font-size: 2.5rem;
+    font-size: 2rem;
   margin: .5rem 2rem;
 
 
