--- a/css/main.css
+++ b/css/main.css
@@ -48,7 +48,7 @@ margin: 4rem;
 
   width: 80%;
   height: 90%;
-background:  url("/images/planten2.jpg");
+background:  url("/images/jadenoodles.jpg");
 
   background-position: center;
   background-size: cover;
